# Synth

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: audio.cpp  audio.h  graphics_setup.cpp  graphics_setup.h  helpers.cpp  helpers.h  imgui_setup.cpp  imgui_setup.h  main.cpp  midi.cpp  midi.h  renderer.cpp  renderer.h  synth_interface.cpp  synth_interface.h  window.cpp  window.h
